# MatrixFuncsLib

./: CMakeLists.txt  README.md  readme.md
include/: MatrixFuncsLib.h
src/: CMakeLists.txt  MatrixFuncsLib.cpp  MatrixMultiplication.cpp  MatrixTranspose.cpp  main.cpp
test/: CMakeLists.txt  MatrixProduct_Test.cpp  Transpose_Test.cpp
